--- a/.gitignore
+++ b/.gitignore
@@ -12,19 +12,18 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+frontend/.vscode/*
+frontend/!.vscode/extensions.json
+frontend/.idea
+frontend/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# env
-*.env
-
 #node_modules
 backend/node_modules
+backend/.env
 frontend/node_modules
+frontend/.env
