--- a/.gitignore
+++ b/.gitignore
@@ -11,19 +11,26 @@ dist
 dist-ssr
 *.local
 
+## frontend
 # Editor directories and files
 frontend/.vscode/*
 frontend/!.vscode/extensions.json
 frontend/.idea
 frontend/.DS_Store
+
+# node & .env
+frontend/node_modules
+frontend/package-lock.json
+frontend/.env
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-#node_modules
+
+## backend
+# node & .env
 backend/node_modules
+backend/package-lock.json
 backend/.env
-frontend/node_modules
-frontend/.env
